--- a/web_development_career.html
+++ b/web_development_career.html
@@ -13,7 +13,7 @@
     <main>
         <section>
             <h2>Introduction</h2>
-            <p>Web development is a dynamic and rapidly growing field...</p>
+            <p>Web development is a dynamic and rapidly growing field that combines creativity and technical expertise. As part of this assignment, I explored job postings for web developers and software developers to understand the skills required for these roles. This exercise provided insight into my current abilities, areas for improvement, and a plan to become employable as a web systems programmer.</p>
         </section>
         <section>
             <h2>Requirements of Web Development Jobs</h2>
