--- a/web_development_career.html
+++ b/web_development_career.html
@@ -17,7 +17,22 @@
         </section>
         <section>
             <h2>Requirements of Web Development Jobs</h2>
-            <p>Through research on platforms like Monster, Indeed, and CareerBuilder...</p>
+            <p>Through research on platforms like Monster, Indeed, and CareerBuilder, I identified the following skills commonly required for web development roles:</p>
+            <h3>Techical Skills</h3>
+            <ul>
+                <li>Proficiency in front-end technologies: HTML, CSS, and JavaScript.</li>
+                <li>Experience with JavaScript frameworks/libraries: React, Angular, or Vue.js.</li>
+                <li></li>Knowledge of server-side programming languages: Node.js, PHP, Python, or Ruby.<li>
+                <li>Database management skills: MySQL, PostgreSQL, or MongoDB.</li>
+                <li>Familiarity with version control systems like Git.</li>
+                <li>Understanding of RESTful APIs and web security best practices.</li>
+            </ul>
+            <h3>Soft Skills</h3>
+            <ul>
+                <li>Strong problem-solving and analytical abilities.</li>
+                <li>Effective communication and teamwork.</li>
+                <li>Attention to detail and time management.</li>
+            </ul>
         </section>
         <section>
             <h2>Self-Evaluation of Skills</h2>
@@ -30,11 +45,17 @@
         </section>
         <section>
             <h2>Reflection on Employability</h2>
-            <p>The COP4813 course has been instrumental...</p>
+            <p>The COP4813 course has been instrumental in providing foundational skills for web development. Assignments such as form validation, JSON data manipulation, and canvas animations have prepared me for client-side scripting roles. However, advancing my backend knowledge and building a diverse portfolio are critical next steps. This introspection has clarified the importance of continuous learning and adapting to industry demands.
+
+</p>
         </section>
+        <section>
+            <h2>Conclusion</h2>
+            <p>Understanding the requirements of web development jobs and identifying skill gaps are essential steps toward becoming employable in this field. By following my outlined plan, I aim to enhance my technical expertise and practical experience, ensuring readiness for the challenges and opportunities of a career in web development. The future is bright, and I am excited to continue growing in this field.</p>
+        
     </main>
     <footer>
-        <p>&copy; 2025 Your Name</p>
+        <p>&copy; 2025 Kristen Appleby</p>
     </footer>
 </body>
 </html>
