--- a/web_development_career.html
+++ b/web_development_career.html
@@ -22,7 +22,7 @@
             <ul>
                 <li>Proficiency in front-end technologies: HTML, CSS, and JavaScript.</li>
                 <li>Experience with JavaScript frameworks/libraries: React, Angular, or Vue.js.</li>
-                <li></li>Knowledge of server-side programming languages: Node.js, PHP, Python, or Ruby.<li>
+                <li>Knowledge of server-side programming languages: Node.js, PHP, Python, or Ruby.</li>
                 <li>Database management skills: MySQL, PostgreSQL, or MongoDB.</li>
                 <li>Familiarity with version control systems like Git.</li>
                 <li>Understanding of RESTful APIs and web security best practices.</li>
@@ -33,11 +33,20 @@
                 <li>Effective communication and teamwork.</li>
                 <li>Attention to detail and time management.</li>
             </ul>
+            <h3>Other Requirements</h3>
+            <ul>
+                <li>Experience with agile methodologies.</li>
+                <li>A portfolio showcasing previous web projects.</li>
+                <li>Relevant certifications or a degree in Computer Science or related fields.</li>
+            </ul>
         </section>
         <section>
             <h2>Self-Evaluation of Skills</h2>
-            <p><strong>Skills I Possess:</strong> ...</p>
-            <p><strong>Skills I Lack:</strong> ...</p>
+            <p><strong>Skills I Possess:</strong> </p>
+            <ul>
+                <li><strong>Front-End Development:</strong> Gained proficiency in HTML, CSS, and JavaScript through COP4813 assignments, such as creating input forms and interactive spirographs.</li>
+            </ul>
+            <p><strong>Skills I Lack:</strong> </p>
         </section>
         <section>
             <h2>Plan to Bridge Skill Gaps</h2>
