--- a/web_development_career.html
+++ b/web_development_career.html
@@ -45,12 +45,34 @@
             <p><strong>Skills I Possess:</strong> </p>
             <ul>
                 <li><strong>Front-End Development:</strong> Gained proficiency in HTML, CSS, and JavaScript through COP4813 assignments, such as creating input forms and interactive spirographs.</li>
+                <li><strong>Client-Side Scripting:</strong> Developed projects that involved JavaScript-based validation, data parsing, and animation on HTML5 canvas.</li>
+                <li><strong>Verison Control:</strong> Basic familiarity with Git, using it to host and manage projects on GitHub.</li>
+                <li><strong>Problem-Solving:</strong> Tackled complex assignments like the JavaScript calculator and drag-and-drop interfaces, which required debugging and logical thinking.</li>
             </ul>
             <p><strong>Skills I Lack:</strong> </p>
+            <ul>
+                <li>Advanced frameworks like React or Angular.</li>
+                <li>Backend development knowledge, including server-side programming and databases.</li>
+                <li>Practical experience with web security and RESTful API design.</li>
+                <li>Comprehensive portfolio with diverse projects.</li>
+            </ul>
         </section>
         <section>
             <h2>Plan to Bridge Skill Gaps</h2>
-            <p>To enhance my employability as a web systems programmer, I have outlined the following plan...</p>
+            <p>To enhance my employability as a web systems programmer, I have outlined the following plan:</p>
+            <ol>
+               <li>Enroll in Online Course:</li>
+                <ul>
+                    <li>Front-End Frameworks: Take courses on React and Angular through platforms like freeCodeCamp or Udemy.</li>
+                    <li>Backend Development: Learn Node.js and Python for server-side programming.</li>
+                    <li>Database Management: Gain hands-on experience with MySQL and MongoDB.</li>
+                </ul>
+                <li>Build a Comprehensive Portfolio:</li>
+                <ul>
+                    <li>Complete personal projects, such as a blog platform or e-commerce site, to showcase full-stack skills.</li>
+                    <li>Contribute to open-source projects to demonstrate collaborative development.</li>
+                </ul>
+            </ol>
         </section>
         <section>
             <h2>Reflection on Employability</h2>
