--- a/drag-and-drop-cards/index.html
+++ b/drag-and-drop-cards/index.html
@@ -10,7 +10,6 @@
     <h1>Drag and Drop Cards</h1>
     <button id="dealButton">Deal Cards</button>
     <div id="deckArea"></div>
-    <div id="discardPile">Discard Pile</div>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
