--- a/drag-and-drop-cards/index.html
+++ b/drag-and-drop-cards/index.html
@@ -9,6 +9,8 @@
 <body>
     <h1>Drag and Drop Cards</h1>
     <button id="dealButton">Deal Cards</button>
+    <button id="drawButton" disabled>Draw Another Card</button>
+    <button id="noDrawButton" disabled>No Thanks</button>
     <div id="deckArea"></div>
     <div id="discardPile">Discard Pile</div>
     <script src="script.js"></script>
