--- a/animation-project/index.html
+++ b/animation-project/index.html
@@ -3,17 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animation Assignment</title>
+    <title>Bouncing Ball Animation</title>
     <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+        }
+        h1 {
+            margin-top: 20px;
+            font-size: 24px;
+            color: #333;
+        }
+        footer {
+            margin-top: 20px;
+            font-size: 14px;
+            color: #666;
+        }
         canvas {
             display: block;
-            margin: 0 auto;
+            margin: 20px auto;
             border: 2px solid black;
         }
     </style>
 </head>
 <body>
+    <!-- Title Section -->
+    <h1>Bouncing Ball Animation</h1>
+
+    <!-- Canvas Section -->
     <canvas id="animationCanvas" width="500" height="400"></canvas>
+
+    <!-- Footer Section -->
+    <footer>
+        Created by [Kristen Appleby], 2025
+    </footer>
+
+    <!-- Script -->
     <script src="animation.js"></script>
 </body>
 </html>
