--- a/animation-project/index.html
+++ b/animation-project/index.html
@@ -38,7 +38,7 @@
 
     <!-- Footer Section -->
     <footer>
-        Created by [Kristen Appleby], 2025
+        Created by Kristen Appleby, 2025
     </footer>
 
     <!-- Script -->
